--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -5,7 +5,7 @@ stop on shutdown
 
 respawn
 
-setuid elspeth
-chdir /home/elspeth/sites/SITENAME/source
+setuid agnes
+chdir /home/agnes/sites/SITENAME/source
 
 exec ../virtualenv/bin/gunicorn --bind unix:/tmp/SITENAME.socket superlists.wsgi:application
